--- a/index.html
+++ b/index.html
@@ -253,19 +253,132 @@ $4.99 to buy
         <div class="print-length">
             <span>Print length </span>
             <div class="print-icon"></div>
-<div class="pages">40 pages</div>        
-
+<div class="pages">40 pages</div>  
         </div>
+        <div class="langue">
+            <span>Language</span>
+            <div class="lang-icon"></div>
+            <div class="la">English</div>
+        </div>
+        <div class="Publication ">
+            <span>Publication date</span>
+            <div class="pub-icon"></div>
+            <div class="pu">June 10, 2020</div>
+        </div>
+        <div class="Dimensions ">
+            <span>Dimensions</span>
+            <div class="dim-icon"></div>
+            <div class="di">6 x 0.1 x 9 inches</div>
+        </div>
+        <div class="isbn ">
+            <span>ISBN-10 </span>
+            <div class="isb-icon"></div>
+            <div class="is">6 x 0.1 x 9 inches</div>
+        </div>
+        <button class="arrow-btn">></button>
+
+
+
+
     </div>
 </div>
 
 
             </div>
 <div class="buy-option">
+<div class="kindle">
+    <div class="img"><img src="https://m.media-amazon.com/images/G/01/kindle/dp/KU._CB463268225_.png" alt="" class="kindle-icon"></div>
+    <span> Included with a Kindle Unlimited membership. </span>
+    <a href="" class="read-with"> Read with Kindle Unlimited </a>
+</div>
+<div class="buy-new">
+    <div class="priceandbuy">
+        <span>Buy new:</span>
+        <span>9.99$</span>
+
+    
+    </div>
+   <span >No Import Fees Deposit & $11.25 Shipping to Israel </span>
+   <br>
+   <span> FREE delivery Thu, Nov 3 if you spend $49 on eligible items</span>
+   <br>
+   <span>Or fastest delivery Tue, Oct 25</span>
+   <br>
+   <div class="loc-and-link">
+    <div class="loc-icon"></div>
+    <a href="">Deliver to Israel</a>
+   </div>
+   <br>
+   <span class="in-stock">In stock</span>
+   <br>
+   <span>As an alternative, the Kindle eBook is included with a Kindle Unlimited membership. <a href="">Learn more.</a></span>
+   <br>
+   <select class="select-qty">
+    <option value="">qty 1</option>
+    <option value="">qty 2</option>
+    <option value="">qty 3</option>
+    <option value="">qty 4</option>
+    <option value="">qty 5</option>
+    <option value="">qty 6</option>
+    <option value="">qty 7</option>
+    <option value="">qty 8</option>
+    <option value="">qty 9</option>
+    <option value="">qty 10</option>
+   </select>
+   <br>
+   <input type="submit" value="add to cart" class="sub1">
+   <input type="submit" value="buy now" class="sub2">
+   <br>
+   <div class="lock">
+    <img src="https://m.media-amazon.com/images/G/01/x-locale/checkout/truespc/secured-ssl._CB485936932_.png" alt="">
+    <a href="">Secure transaction</a>
+   </div>
+   <br>
+   <div class="ships">
+    <span>Ships from</span>
+    <span>Amazon.com</span>
+ 
+   </div>
+   <div class="sold">
+    <span>Sold by</span>
+    <span>Amazon.com</span>
+
+   </div>
+   <br>
+   <span>Return policy: <a href=""> Eligible for Return, Refund or Replacement within 30 days of receipt </a></span>
+   <br>
+   <div class="checkbox">
+    <input type="checkbox" name="" id="" >
+    <span>Add a gift receipt for easy returns    </span>
+
+   </div>
+   <button class="add-to ">add to list </button>
+
+
+   
+</div>
+<br>
+<div class="share">
+    <span>share </span>
+    <div class="email-img"></div>
+    <div class="facebook-img"></div>
+    <div class="twite"></div>
+    <div class="pinterest"></div>
+    
+</div>
+<br>
+<span>Have one to sell?</span>
+<button>sell on amazon</button>
+<br>
+<div class="bookclub">
+    <img src="https://m.media-amazon.com/images/G/01/amazonbookclub/ABC_logo_primary_beta._CB408510813_.svg" alt="" class="book-club-img">
+        <input type="submit" value="Add to book club ">
+    <br>
+    <span>Not in a club? <a href="">Learn more </a></span>
+</div>
 
 </div>
         </div>
-
     </main>
 </body>
 </html>
